--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@prisma/client": "^5.22.0",
+    "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "firebase": "^12.5.0",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
